--- a/trunk/src/autom4te.cache/traces.1
+++ b/trunk/src/autom4te.cache/traces.1
@@ -842,7 +842,7 @@ m4trace:configure.ac:33: -1- m4_pattern_allow([^MCS$])
 m4trace:configure.ac:39: -1- AC_SUBST([INSTALLED_ASSEMBLIES])
 m4trace:configure.ac:39: -1- AC_SUBST_TRACE([INSTALLED_ASSEMBLIES])
 m4trace:configure.ac:39: -1- m4_pattern_allow([^INSTALLED_ASSEMBLIES$])
-m4trace:configure.ac:50: -1- AC_CONFIG_FILES([
+m4trace:configure.ac:51: -1- AC_CONFIG_FILES([
 Makefile
 src/Makefile
 src/Framework/Makefile
@@ -851,19 +851,20 @@ src/Core/Makefile
 src/Core/AssemblyInfo.cs
 src/Console/Makefile
 src/Console/AssemblyInfo.cs
+monobenchmark-framework.pc
 ])
-m4trace:configure.ac:52: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:52: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:52: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:52: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:52: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:53: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:53: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:53: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:53: -1- AC_SUBST_TRACE([INSTALL])
