--- a/wiki/Tutorials_Basic.wiki
+++ b/wiki/Tutorials_Basic.wiki
@@ -1,4 +1,5 @@
 #summary Tutorials: Basic Usage
+#labels Featured,Phase-Deploy
 
 = Introduction =
 
@@ -85,7 +86,6 @@ The content is like the following:
 </testSummary>
 
 }}}
-
 
 
 
